[gd_scene load_steps=2 format=2]

[ext_resource path="res://examples/confirmation-dialog.gd" type="Script" id=1]

[node name="Confirmation Dialog" type="Container"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResponseLabel" type="Label" parent="."]
margin_left = 175.0
margin_top = 50.0
margin_right = 375.0
margin_bottom = 90.0
rect_min_size = Vector2( 200, 40 )
valign = 1

[node name="OpenDialogButton" type="Button" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 150.0
margin_bottom = 90.0
rect_min_size = Vector2( 100, 40 )
text = "Open Dialog"

[node name="MouseBlockPanelContainer" type="PanelContainer" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.745098 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
margin_left = 400.0
margin_top = 200.0
margin_right = 700.0
margin_bottom = 310.0
rect_min_size = Vector2( 300, 110 )
popup_exclusive = true
dialog_text = "Do you accept the 30 page long cryptic legal document which binds and traps you into unfair terms and conditions in exchange for your soul so you can play a game? "
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="OpenDialogButton" to="." method="_on_OpenDialogButton_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
